--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@improbable-eng/grpc-web": "^0.15.0",
+    "@types/google-protobuf": "^3.15.5",
+    "google-protobuf": "^3.19.1",
     "rxjs": "~6.6.0",
+    "ts-protoc-gen": "^0.15.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
