--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@improbable-eng/grpc-web": "^0.15.0",
+    "@ngx-grpc/common": "^2.4.1",
     "@types/google-protobuf": "^3.15.5",
     "google-protobuf": "^3.19.1",
     "rxjs": "~6.6.0",
