--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "test-headless": "ng test --watch=false --browsers=ChromeHeadless",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +26,7 @@
     "@angular/router": "~12.2.0",
     "@improbable-eng/grpc-web": "^0.15.0",
     "@ngx-grpc/common": "^2.4.1",
+    "@ngx-grpc/grpc-web-client": "^2.4.1",
     "@types/google-protobuf": "^3.15.5",
     "google-protobuf": "^3.19.1",
     "rxjs": "~6.6.0",
