--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngx-grpc/grpc-web-client": "^2.4.1",
     "google-protobuf": "^3.19.1",
     "lodash": "^4.17.21",
+    "merge-images": "^2.0.0",
     "rxjs": "~6.6.0",
     "ts-protoc-gen": "^0.15.0",
     "tslib": "^2.3.0",
@@ -41,6 +42,7 @@
     "@types/google-protobuf": "^3.15.5",
     "@types/jasmine": "~3.8.0",
     "@types/lodash": "^4.14.177",
+    "@types/merge-images": "^1.2.1",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
