--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@improbable-eng/grpc-web": "^0.15.0",
     "@ngx-grpc/common": "^2.4.1",
     "@ngx-grpc/grpc-web-client": "^2.4.1",
+    "file-upload": "0.0.0",
     "google-protobuf": "^3.19.1",
     "lodash": "^4.17.21",
     "merge-images": "^2.0.0",
+    "node-gyp": "^8.4.1",
+    "node-pre-gyp": "^0.17.0",
     "rxjs": "~6.6.0",
     "ts-protoc-gen": "^0.15.0",
     "tslib": "^2.3.0",
@@ -43,7 +46,7 @@
     "@types/jasmine": "~3.8.0",
     "@types/lodash": "^4.14.177",
     "@types/merge-images": "^1.2.1",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.37",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
